--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Cambay&family=Nanum+Myeongjo&family=Noto+Sans+KR&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Cambay&family=Nanum+Myeongjo&family=Noto+Sans+KR:wght@100;400&display=swap"
       rel="stylesheet"
     />
     <title>Vite + React + TS</title>
