[기능수정] Open Graph 및 Twitter Card 메타 태그 추가

--- a/index.html
+++ b/index.html
@@ -2,8 +2,31 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="일인칭서재" />
+    <meta property="og:description" content="일인칭서재, 나만의 도서 코멘트." />
+    <meta
+      property="og:url"
+      content="https://first-person-library.vercel.app/"
+    />
+    <meta
+      property="og:image"
+      content="https://file.notion.so/f/s/017b1a2e-849b-4f02-8aa7-79d0022520b3/%EB%AC%B4%EC%A0%9C(1).png?id=daf6f867-c554-4343-a7de-b5900368e0d7&table=block&spaceId=b26cc489-4bd2-4810-81ef-f8c65e3524e5&expirationTimestamp=1693425600000&signature=SYNruZjpibChtBqPCdUv7a0mJpSg96RnZW-jCPkvVuw&downloadName=%EB%AC%B4%EC%A0%9C%281%29.png"
+    />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="일인칭서재" />
+    <meta
+      name="twitter:description"
+      content="일인칭서재, 나만의 도서 코멘트."
+    />
+    <meta
+      name="twitter:image"
+      content="https://file.notion.so/f/s/017b1a2e-849b-4f02-8aa7-79d0022520b3/%EB%AC%B4%EC%A0%9C(1).png?id=daf6f867-c554-4343-a7de-b5900368e0d7&table=block&spaceId=b26cc489-4bd2-4810-81ef-f8c65e3524e5&expirationTimestamp=1693425600000&signature=SYNruZjpibChtBqPCdUv7a0mJpSg96RnZW-jCPkvVuw&downloadName=%EB%AC%B4%EC%A0%9C%281%29.png"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -11,6 +34,7 @@
       rel="stylesheet"
     />
     <title>일인칭서재</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
     <div id="root"></div>
