[기능수정] 메타 태그 내 잘못된 content 값 수정

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="일인칭서재" />
     <meta property="og:description" content="일인칭서재, 나만의 도서 코멘트." />
     <meta
@@ -12,11 +11,9 @@
     />
     <meta
       property="og:image"
-      content="https://file.notion.so/f/s/017b1a2e-849b-4f02-8aa7-79d0022520b3/%EB%AC%B4%EC%A0%9C(1).png?id=daf6f867-c554-4343-a7de-b5900368e0d7&table=block&spaceId=b26cc489-4bd2-4810-81ef-f8c65e3524e5&expirationTimestamp=1693425600000&signature=SYNruZjpibChtBqPCdUv7a0mJpSg96RnZW-jCPkvVuw&downloadName=%EB%AC%B4%EC%A0%9C%281%29.png"
+      content="https://hongjungmin.notion.site/image/https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fsecure.notion-static.com%2F017b1a2e-849b-4f02-8aa7-79d0022520b3%2F%25EB%25AC%25B4%25EC%25A0%259C(1).png?table=block&id=daf6f867-c554-4343-a7de-b5900368e0d7&spaceId=b26cc489-4bd2-4810-81ef-f8c65e3524e5&width=2000&userId=&cache=v2"
     />
     <meta property="og:type" content="website" />
-
-    <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="일인칭서재" />
     <meta
@@ -25,16 +22,20 @@
     />
     <meta
       name="twitter:image"
-      content="https://file.notion.so/f/s/017b1a2e-849b-4f02-8aa7-79d0022520b3/%EB%AC%B4%EC%A0%9C(1).png?id=daf6f867-c554-4343-a7de-b5900368e0d7&table=block&spaceId=b26cc489-4bd2-4810-81ef-f8c65e3524e5&expirationTimestamp=1693425600000&signature=SYNruZjpibChtBqPCdUv7a0mJpSg96RnZW-jCPkvVuw&downloadName=%EB%AC%B4%EC%A0%9C%281%29.png"
+      content="https://hongjungmin.notion.site/image/https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fsecure.notion-static.com%2F017b1a2e-849b-4f02-8aa7-79d0022520b3%2F%25EB%25AC%25B4%25EC%25A0%259C(1).png?table=block&id=daf6f867-c554-4343-a7de-b5900368e0d7&spaceId=b26cc489-4bd2-4810-81ef-f8c65e3524e5&width=2000&userId=&cache=v2"
     />
+    <meta
+      name="twitter:url"
+      content="https://first-person-library.vercel.app/"
+    />
+    <title>일인칭서재</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Cambay&family=Nanum+Myeongjo&family=Noto+Sans+KR:wght@100;400&display=swap"
       rel="stylesheet"
     />
-    <title>일인칭서재</title>
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
     <div id="root"></div>
